--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -7,11 +7,24 @@
     android:background="@color/fondo">
 
     <Button
+        android:id="@+id/btAdmin"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="24dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginEnd="24dp"
+        android:text="@string/admin"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/btPaginaWeb" />
+
+    <Button
         android:id="@+id/btCartaHome"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="24dp"
-        android:layout_marginTop="40dp"
+        android:layout_marginTop="25dp"
         android:layout_marginEnd="24dp"
         android:backgroundTint="@color/botones"
         android:text="@string/carta"
@@ -24,7 +37,7 @@
         android:id="@+id/imageView2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="65dp"
+        android:layout_marginTop="45dp"
         android:layout_marginBottom="52dp"
         android:contentDescription="@string/logo_de_la_aplicai_n"
         app:layout_constraintBottom_toTopOf="@+id/textView3"
@@ -38,7 +51,7 @@
         android:id="@+id/textView3"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="45dp"
+        android:layout_marginTop="35dp"
         android:text="@string/bienvenido_a_la_casa_nostra"
         android:textAlignment="center"
         android:textSize="24sp"
@@ -50,7 +63,7 @@
         android:id="@+id/textView4"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="38dp"
+        android:layout_marginTop="30dp"
         android:text="@string/pulse_el_bot_n_para_ir_directo_a_la_carta"
         android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
