--- a/app/src/main/res/layout/fragment_reserva.xml
+++ b/app/src/main/res/layout/fragment_reserva.xml
@@ -28,12 +28,13 @@
         android:textStyle="bold" />
 
     <!-- EditText del primer apartado -->
-    <android.widget.Spinner
+    <EditText
         android:id="@+id/cantidad"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
         android:textAlignment="center"
+        android:inputType="numberDecimal"
         android:textStyle="bold" />
 
     <!-- Botones del primer apartado -->
