--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -33,6 +33,12 @@
             android:icon="@drawable/setting"
             android:title="@string/configuracion"
             />
+        <item
+            android:id="@+id/terminos"
+            android:checked="false"
+            android:icon="@drawable/setting"
+            android:title="@string/terminos_y_condiciones"
+            />
 
     </group>
 </menu>
