--- a/app/src/main/res/layout/fragment_terminos.xml
+++ b/app/src/main/res/layout/fragment_terminos.xml
@@ -5,6 +5,8 @@
     <TextView
         android:id="@+id/terms_and_conditions_textview"
         android:layout_width="match_parent"
+        android:layout_marginStart="10dp"
+        android:layout_marginEnd="10dp"
         android:layout_height="wrap_content" />
 
 </ScrollView>
