--- a/app/src/main/res/layout/nav_header_main_login.xml
+++ b/app/src/main/res/layout/nav_header_main_login.xml
@@ -26,7 +26,7 @@
         android:id="@+id/header_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Texto de ejemplo"
+        android:text="@string/bienvenido"
         android:textColor="@color/white"
         android:textSize="18sp" />
 
